Version 1.1. Fixed a bug that occured when ethernet device names were too long.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,8 @@
 
-.helloworld-label {
+.vp-label {
     font-size: 36px;
     font-weight: bold;
-    color: #ffffff;
+    color: #073642;
     background-color: rgba(10,10,10,0.7);
     border-radius: 5px;
     padding: .5em;
